--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <!-- Used for automated testing -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js" integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css" integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,17 +17,26 @@
 <body>
 
     <!-- Create a header element  -->
-
+    <header>
+        <h1>Elwood Nelson</h1>
+    </header>
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <main>
     <!-- Include an image -->
+    <img style="height:350px;" src="file:///Users/enelson/Documents/Prime%20Academy/assignment-unit-1/images/IMG_8241.png" alt="northern lights"  />
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
+<ul>
+    <li>I've climbed the highest mountains in two different countries</li>
+    <li>I (and my crews) have made over 50,000 donuts from scratch</li>
+    <li>I successfully resuscitated an animal using modified CPR </li>
+</ul>
     </main>
     <!-- Create a footer element -->
-
+    <footer>
+        <p>Education is learning what you didn’t even know you didn’t know.</p>
+    </footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 
     <div id="container">
