--- a/assignment/index.html
+++ b/assignment/index.html
@@ -30,7 +30,7 @@
 <ul>
     <li>I've climbed the highest mountains in two different countries</li>
     <li>I (and my crews) have made over 50,000 donuts from scratch</li>
-    <li>I successfully resuscitated an animal using modified CPR </li>
+    <li>I once successfully resuscitated an animal using modified CPR </li>
 </ul>
     </main>
     <!-- Create a footer element -->
