adjusted ul heading

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -27,7 +27,9 @@
     <img style="height:350px;" src="file:///Users/enelson/Documents/Prime%20Academy/assignment-unit-1/images/IMG_8241.png" alt="northern lights"  />
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-<ul>
+    <br>
+    <b><u><font-size:14>A few fun facts about me</font-size:14></u></b>
+    <ul>
     <li>I've climbed the highest mountains in two different countries</li>
     <li>I (and my crews) have made over 50,000 donuts from scratch</li>
     <li>I once successfully resuscitated an animal using modified CPR </li>
