fixed image link

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -24,7 +24,7 @@
 
     <main>
     <!-- Include an image -->
-    <img style="height:350px;" src="file:///Users/enelson/Documents/Prime%20Academy/assignment-unit-1/images/IMG_8241.png" alt="northern lights"  />
+    <img style="height:350px;" src="../images/IMG_8241.png" alt="northern lights"  />
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
     <br>
